app/assets/stylesheets/application.css
body {
  margin: 0;
  font-family: Corbel;
  background: #dbe5f0;
}

a {
  color: purple;
  text-decoration: none;
}

a:visited {
  color: purple;
}

a:hover {
  color: orange;
  transition: color .25s ease-in-out;
   -moz-transition: color .25s ease-in-out;
   -webkit-transition: color .25s ease-in-out;
}

h1 {
  margin: 0;
}

.log_in_table td {
  vertical-align: top;
  padding-right: 75px;
}

.id_bar {
  width: auto;
  height: 22px;
  padding: 0.5em;
  padding-right: 15px;
  text-align: right;
}

.header {
  width: auto;
  background-color: teal;
  height: auto;
  color: white;
  font-family: Trebuchet MS;
  padding: 1em;
}

.container {
  padding: 25px;
  padding-left: 50px;
}

.left_box {
  float:left;
  margin-right: 45px;
}

.profile_table td {
  padding-right: 1em;
  vertical-align:top;
}

.right_box {
  float:left;
}

.style_image {
  border: 1px solid #596773;
  width: 150px;
}

.browse_link {
  background: orange;
  border: 1px solid #999999;
  padding: 10px;
  width: 100px;
}

.browse_link:hover {
  background: #ffd342;
  transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
}

.browse_link a:hover {
  color: purple;
}

.friend_list {
  background: white;
  margin: 10px;
  padding: 10px;
  width: 250px;
  border: 1px solid #c4cfd9;
}

/*Post*/
.post_box {
  background: white;
  margin: 10px;
  padding: 10px;
  width: 400px;
  border: 1px solid #c4cfd9;
}

.post_box td {
  margin: 10px;
  padding-right: 10px;
  vertical-align:top;
}

.post_title {
  font-weight: bold;
  font-size: 15px;
}

.post_date {
  font-style: italic;
  font-size: 12px;
  color: #696969;
}

.post_content {
  font-size: 14px;
}

/*User Index*/
.user_box {
  background: white;
  margin: 10px;
  padding: 10px;
  width: 250px;
  height: 58px;
  border: 1px solid #c4cfd9;
  display: inline-block;
}

.table_padding td {
  padding-right: 5px;
}

